--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,14 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+
+
+
+    <string name="API_HOST">@string/HS_HOST_TEST</string><!--**-->
+    <string name="HS_HOST">http://www.niuniuqiche.com</string>
+    <string name="HS_HOST_TEST">http://121.40.204.159</string>
+
+    <integer name="API_HTTP_PORT">@integer/HS_HTTP_PORT_TEST</integer><!--**-->
+    <integer name="HS_HTTP_PORT">80</integer>
+    <integer name="HS_HTTP_PORT_TEST">8888</integer>
 </resources>
