--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,9 @@
 
     <string name="API_HOST">@string/HS_HOST</string>
     <string name="HS_HOST">http://www.niuniuqiche.com</string>
-    <string name="HS_HOST_TEST">http://121.40.204.159</string>
+    <string name="HS_HOST_TEST">http://staging.iniuniu.com.cn</string>
 
     <integer name="API_HTTP_PORT">@integer/HS_HTTP_PORT</integer>
     <integer name="HS_HTTP_PORT">80</integer>
-    <integer name="HS_HTTP_PORT_TEST">8888</integer>
+    <integer name="HS_HTTP_PORT_TEST">80</integer>
 </resources>
